--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,11 @@
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-chrome-driver</artifactId>
+            <artifactId>selenium-java</artifactId>
             <version>4.20.0</version>
         </dependency>
+
+
     </dependencies>
 
 </project>
